--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d7694039d697b0bbd61de9a3358f0903"></script>
     <title>React App</title>
   </head>
   <body>
